[package]
name = "near-socialdb-client"
version = "0.3.1"
edition = "2021"
authors = ["FroVolod <frol_off@meta.ua>", "frol <frolvlad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bos-cli-rs/near-socialdb-client-rs"
description = "near-socialdb-client-rs is crate for work with data in near-social."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
url = { version = "2", features = ["serde"] }

near-crypto = ">0.22,<0.24"
near-primitives = ">0.22,<0.24"
near-jsonrpc-client = "0.10"
near-jsonrpc-primitives = ">0.22,<0.24"

near-token = "0.2.0"

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1", features = ["full"] }
